Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Hi, I'm Rick.  I joined Flatiron School to move my career in a new direction and I couldn't be more excited about it!</p>
